--- a/css/style.css
+++ b/css/style.css
@@ -122,31 +122,9 @@ Typing Animation
 
 /* --------------------------------
 
-Preloader
+Typing Animation's Responsiveness
 
 -------------------------------- */
-#preloader {
-  position: fixed;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
-  background-color:#fff; /* change if the mask should have another color then white */
-  z-index:1200; /* makes sure it stays on top */
-}
-
-#status {
-  width:200px;
-  height:200px;
-  position:absolute;
-  left:50%; /* centers the loading animation horizontally one the screen */
-  top:50%; /* centers the loading animation vertically one the screen */
-  background-image:url(../img/status.gif); /* path to your loading animation */
-  background-repeat:no-repeat;
-  background-position:center;
-  margin:-100px 0 0 -100px; /* is width and height divided by two */
-}
-
 @media only screen and (max-width: 480px) {
   .text_h {
   padding: 4% 0;
